Fix half covered sidebar resize handle.

--- a/src/stylesheets/components/_resizable.scss
+++ b/src/stylesheets/components/_resizable.scss
@@ -10,6 +10,7 @@ $resizable-threshold: 8px !default;
   display: flex;
   flex-direction: column;
   position: relative;
+  z-index: 1;
   contain: size layout style;
 
   .resizable-handle {
